fix for the bug #2419: order by ignores rows. null_ref_key moved to TABLE_REF. new null range created if necessary.